# pelican-engrave

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: deploy.yml  main.yml  versions.yml
pelican/plugins/engrave/: engrave.py  test_engrave.py
pelican/plugins/engrave/engraver/: __init__.py  qrcode.py  template.py
pelican/plugins/engrave/tests/: test_engrave.py
pelican/plugins/engrave/tests/test_engraver/: test_qrcode.py  test_template.py
pelican/plugins/lm_pelican_engrave/: __init__.py
pelican/plugins/lm_pelican_engrave/engraver/: __init__.py  template.py
pelican/plugins/lm_pelican_engrave/tests/: test_engrave.py
pelican/plugins/lm_pelican_engrave/tests/test_engraver/: test_template.py
